SEE - Improve ClassLoader to load jars in jars